# freepv

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  demo_east_west.py  demo_solar_array.py  demo_terrain_draped.py  demo_tracker_array.py  mcp.json  pyproject.toml  sample_terrain.csv  test_live_connection.py  test_mcp_tools.py  test_terrain_standalone.py
addon/FreePVC/: FreePVC  Init.py  InitGui.py
addon/FreePVC/commands/: cmd_rpc.py
addon/FreePVC/objects/: FixedRack.py  SolarPanel.py  Tracker.py  __init__.py
addon/FreePVC/rpc_server/: __init__.py  rpc_server.py
docs/: DEVELOPMENT.md
scripts/: install_addon.py
src/freepvc/: __init__.py  connection.py  server.py
src/freepvc/engines/: layout_engine.py  terrain_engine.py
src/freepvc/io/: elevation_fetch.py  terrain_import.py
src/freepvc/mcp_tools/: project.py  terrain.py
src/freepvc/models/: solar_objects.py  terrain.py
tests/: test_terrain_engine.py
