[project]
name = "freepvc"
version = "0.1.0"
description = "Open-source solar plant design toolkit for FreeCAD with MCP integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "FreePVC Contributors"}
]
keywords = ["solar", "pv", "photovoltaic", "freecad", "cad", "mcp", "design", "engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "freecad-mcp>=0.1.0",
    "numpy>=1.21",
    "scipy>=1.8",
    "pvlib>=0.10",
    "openpyxl>=3.0",
    "ezdxf>=1.0",
    "simplekml>=1.3",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
freepvc = "freepvc.server:main"

[project.urls]
Homepage = "https://github.com/freepvc/freepvc"
Repository = "https://github.com/freepvc/freepvc"
Issues = "https://github.com/freepvc/freepvc/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freepvc"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
